[YX] modified the link to submodule

--- a/modal/index.html
+++ b/modal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>css-demo</title>
     <link rel="stylesheet" href="./index.css">
     <script type="text/javascript" src="./index.js"></script>
 </head>
