[YX] add css puregraph

--- a/pureGraph/index.html
+++ b/pureGraph/index.html
@@ -22,9 +22,33 @@
     <div class="rectangle"></div>
 
     <br/>
+    <!--半色长方形-->
+    半色长方形 - rectangle with half color
+    <div class="rectangle-with-half-color"></div>
+    <br/>
+
+    <!--渐变长方形-->
+    渐变长方形 - gradient-rectangle
+    思路：css background: liner-gradient(45deg,blue,red)
+    0 deg 在x轴
+    <div class="gradient-rectangle"></div>
+
+
+    <br/>
     <!--圆形-->
     圆形 - circle
     <div class="circle"></div>
+
+    <br/>
+    <!--圆形-->
+    圈形 - circle
+    <div class="circle-beauty-1"></div>
+
+
+    <br/>
+    <!--圆形-->
+    圈形 - circle
+    <div class="circle-beauty-2"></div>
 
     <br/>
     <br/>
@@ -56,8 +80,8 @@
 
 
     <br/>
-    思路1：设置border为50px solid  color,设置不显示颜色的color为transparent
-    思路2：设置border为50px solid  transparent,设置显示颜色的color为xx
+    思路1：设置border为50px solid color,设置不显示颜色的color为transparent
+    思路2：设置border为50px solid transparent,设置显示颜色的color为xx
     <br/>
     <!--左上三角形-->
     左上三角形 - leftTopTriangle
@@ -79,8 +103,103 @@
     <br/>
     <!--平行四边形-->
     平行四边形 - parallelogram
+
     <div class="parallelogram"></div>
 
+    <br/>
+    <br/>
+    <!--梯形-->
+    梯形 - trapezoid
+    思路：上三角的写法加上width即可
+
+    <div class="trapezoid"></div>
+
+
+    <br/>
+    <br/>
+    <!--六角星-->
+    六角星 - star-six
+    思路：一个上三角加一个下三角
+
+    <div class="star-six"></div>
+
+    <br/>
+    <br/>
+    <br/>
+    <!--五角星-->
+    五角星 - star-five-step-1
+    思路：step by step
+    <br/>
+    step1:
+    <div class="star-five-step-1"></div>
+    <br/>
+    step2: add rotate
+    <div class="star-five-step-2"></div>
+    <br/>
+    <br/>
+    final:
+    <div class="star-five"></div>
+
+
+    <br>
+    <br>
+    <br>
+    <!--五边形-->
+    五边形
+    思路： 一个三角形加一个倒梯形
+
+    自己需要计算三角函数。。。
+    <div class="pentagon">
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <!--六边形-->
+    六边形
+    思路： 一个三角形加一个矩形加一个倒三角形
+
+    <div class="hexagon">
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <!--八边形-->
+    八边形
+    思路： 一个梯形加一个矩形加一个倒梯形
+
+    <div class="octagon">
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <!--爱心-->
+    爱心
+    思路： 一个左倾斜子弹头加一个右倾斜子弹头
+
+    <div class="heart">
+    </div>
+
+
+    <!--无限大-->
+    无限大
+    思路：一个圈加一个圈
+    <div class="infinity">
+
+    </div>
+
+
+    <br>
+    <br>
+
+    <!--吃豆人-->
+    吃豆人
+    思路：利用border
+    <div class="pacman">
+
+    </div>
 
 </div>
 
