Add input inside modal

--- a/modal/index.html
+++ b/modal/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>css-demo</title>
     <link rel="stylesheet" href="./index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="./index.js"></script>
 </head>
 <body>
@@ -81,6 +82,7 @@
                 <p>我在窗口中</p>
                 <p>我在窗口中</p>
                 <p>我在窗口中</p>
+                <input type='text' value='12'/>
                 <p>我在窗口中</p>
                 <p>我在窗口中</p>
                 <p>我在窗口中</p>
