Add check and hero-background pureGraph

--- a/pureGraph/index.html
+++ b/pureGraph/index.html
@@ -202,6 +202,46 @@
 
     </div>
 
+    <br>
+    <br>
+
+
+    <!--对勾-->
+    对勾
+    思路：设置一个带有border的矩形，将左和上border置空，再将矩形倾斜45度微调即可
+    <div>
+      <div class="check"></div>
+      <div class="big-check"></div>
+    </div>
+
+    <br>
+    <br>
+
+    <!--背景梯形-->
+    背景梯形1
+    思路：一个矩形搭一个三角形 注意两边不能存在margin
+    <div class="hero-background">
+      <div class="hero-rectangle">
+        这是一个矩形
+      </div>
+      <div class="hero-triangle">
+      </div>
+    </div>
+
+    <br>
+    <br>
+
+    <!--背景梯形-->
+    背景梯形2 (推荐使用)
+    思路：使用css的transform属性控制一个倾斜的平行四边形，与上面的方法相比，可以在一段范围内显示，不必铺满整个屏幕
+    <div class="hero-background-ad">
+      <div class="hero-rectangle-ad">
+        这是一个矩形
+      </div>
+      <div class="hero-triangle-ad">
+      </div>
+    </div>
+
 </div>
 
 </body>
