update the pureGraph doc

--- a/pureGraph/index.html
+++ b/pureGraph/index.html
@@ -233,7 +233,8 @@
 
     <!--背景梯形-->
     背景梯形2 (推荐使用)
-    思路：使用css的transform属性控制一个倾斜的平行四边形，与上面的方法相比，可以在一段范围内显示，不必铺满整个屏幕
+    思路：使用css的transform属性控制一个倾斜的平行四边形，与上面的方法相比，可以在一段范围内显示，不必铺满整个屏幕，
+    但是对于特别宽的屏幕的仍然需要特别的技巧处理
     <div class="hero-background-ad">
       <div class="hero-rectangle-ad">
         这是一个矩形
