Add desc to modal

--- a/modal/index.html
+++ b/modal/index.html
@@ -12,11 +12,26 @@
 <div id="root">
     <div class="container">
         <section>
-            <button onclick="openModalV1()">打开窗口1</button>
-            <button onclick="openModalV2()">打开窗口2</button>
-            <button onclick="openModalV3()">打开窗口3</button>
-            <button onclick="openModalV4()">打开窗口4</button>
-            <button onclick="openModalV5()">打开窗口5</button>
+            <div>
+                <button onclick="openModalV1()">打开窗口V1</button>
+                垂直居上短modal 宽度高度固定
+            </div>
+            <div>
+                <button onclick="openModalV2()">打开窗口V2</button>
+                垂直居上短modal 宽度高度不固定 版本1
+            </div>
+            <div>
+                <button onclick="openModalV3()">打开窗口V3</button>
+                垂直居上短modal 宽度高度不固定 版本2
+            </div>
+            <div>
+                <button onclick="openModalV4()">打开窗口V4</button>
+                垂直居中短modal 宽度高度不固定 版本1
+            </div>
+            <div>
+                <button onclick="openModalV5()">打开窗口V5</button>
+                垂直居中短modal 宽度高度不固定 版本2
+            </div>
             <p>我只是无意义的背景内容</p>
             <p>我只是无意义的背景内容</p>
             <p>我只是无意义的背景内容</p>
