Add lean background

--- a/transform/index.html
+++ b/transform/index.html
@@ -8,13 +8,20 @@
 </head>
 <body>
 <div class="container">
-    <div class="picwall">
-        <a href="http://baike.baidu.com/view/1061206.htm">
-            <img class="pic-img" src="./linyuner.jpg" alt="林允儿">
-            <div class="content">
-                <h3>林允儿</h3>
-            </div>
-        </a>
+    <div class="wrapper">
+        <div class="picwall">
+            <a href="http://baike.baidu.com/view/1061206.htm">
+                <img class="pic-img" src="./linyuner.jpg" alt="林允儿">
+                <div class="content">
+                    <h3>林允儿</h3>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="background-wrapper">
+        <div class="lean-background">
+            倾斜的大背景图
+        </div>
     </div>
 </div>
 </body>
