commit to align

--- a/book/index36.html
+++ b/book/index36.html
@@ -39,7 +39,7 @@
 </div>
 <p>还有更多的简介哦<a target="_blank" href="https://baike.baidu.com/item/%E6%9E%97%E5%85%81%E5%84%BF">林允儿</a></p>
 
-<div class="separate">==========分割线==========</div>
+<div class="separate-line">==========分割线==========</div>
 
 <p>版本二</p>
 <div class="panel-V2">
