--- a/align/index.html
+++ b/align/index.html
@@ -1,163 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>align</title>
-    <link rel="stylesheet" href="./index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>align</title>
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-
-<header>
-    This text is centered.
-</header>
+<div class="title">水平居中:</div>
 
 <nav role='navigation'>
-    <a href="#">One</a>
-    <a href="#">Two</a>
-    <a href="#">Three</a>
-    <a href="#">Four</a>
+  <a href="#">One</a>
+  <a href="#">Two</a>
+  <a href="#">Three</a>
+  <a href="#">Four</a>
 </nav>
 
-
-内联元素居中，使用text-align
-<hr>
+<p>内联元素居中，使用text-align: center</p>
+<div class="break-line"></div>
 
 <div class="center">
-    I'm a block level element and am centered.
+  I'm a block level element and am centered.
 </div>
 
-块级元素居中，使用margin: 0 auto
-<hr>
+<p>块级元素居中，使用margin: 0 auto</p>
+<div class="break-line"></div>
 <div class="inline-block-center">
-    <div>
-        I'm an element that is block-like with my siblings and we're centered in a row.
-    </div>
-    <div>
-        I'm an element that is block-like with my siblings and we're centered in a row. I have more content in me than
-        my siblings do.
-    </div>
-    <div>
-        I'm an element that is block-like with my siblings and we're centered in a row.
-    </div>
+  <div>
+    I'm an element that is block-like with my siblings and we're centered in a row.
+  </div>
+  <div>
+    I'm an element that is block-like with my siblings and we're centered in a row. I have more content in me than
+    my siblings do.
+  </div>
+  <div>
+    I'm an element that is block-like with my siblings and we're centered in a row.
+  </div>
 </div>
+<p>多列元素居中，使用display: inline-block; text-align:center</p>
+<div class="break-line"></div>
 
-多列元素居中，使用display: inline-block; text-align:center
-<hr>
+<div class="title">垂直居中:</div>
 
 <div class="text-align-center">
-    <a href="#">We're</a>
-    <a href="#">Centered</a>
-    <a href="#">Bits of</a>
-    <a href="#">Text</a>
+  <a href="#">We're</a>
+  <a href="#">Centered</a>
+  <a href="#">Bits of</a>
+  <a href="#">Text</a>
 </div>
 
-文本垂直居中 设置padding 上下间距一样即可
-<hr>
+<p>文本垂直居中 方法1：设置padding 上下间距一样即可</p>
+<div class="break-line"></div>
+
+
+<div class="text-align-center-1">
+  <a href="#">We're</a>
+  <a href="#">Centered</a>
+  <a href="#">Bits of</a>
+  <a href="#">Text</a>
+</div>
+
+<p>文本垂直居中 方法2：设置line-light和height一样即可</p>
+<div class="break-line"></div>
 
 <div class="flex-center">
-    <div class="flex-container">
-        <div>
-            I'm an element that is block-like with my siblings and we're centered in a row.
-        </div>
-        <div>
-            I'm an element that is block-like with my siblings and we're centered in a row. I have more content in me
-            than my siblings do.
-        </div>
-        <div>
-            I'm an element that is block-like with my siblings and we're centered in a row.
-        </div>
+  <div class="flex-container">
+    <div>
+      I'm an element that is block-like with my siblings and we're centered in a row.
     </div>
+    <div>
+      I'm an element that is block-like with my siblings and we're centered in a row. I have more content in me
+      than my siblings do.
+    </div>
+    <div>
+      I'm an element that is block-like with my siblings and we're centered in a row.
+    </div>
+  </div>
 </div>
 
 <p>
-    多行垂直居中，使用flex布局,
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+  多行垂直居中，使用flex布局,
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 </p>
 
-<hr>
+<div class="break-line"></div>
 
 <div class="absolute-parent">
-    <div class="absolute-child-no-height">
-        <span>
-            hehe i am the child inside    单个块级元素的垂直方向居中,在知道子级block的高度时， 父级设置为相对定位，子级设置为绝对定位，top
-
-        </span>
-    </div>
+  <div class="absolute-child-no-height">
+    hehe i am the child inside 单个块级元素的垂直方向居中，在知道子级block的高度时，父级设置为相对定位，子级设置为绝对定位
+  </div>
 </div>
 
 <p>
-    单个块级元素的垂直方向居中, 在【不知道】子级block的高度时， 父级设置为相对定位，子级设置为绝对定位，top:50%, left:50, transform: translate(-50%,-50%)
-    transform中translate偏移的百分比值是相对于自身大小的
+  单个块级元素的垂直方向居中, 在`不知道`子级block的高度时， 父级设置为相对定位，子级设置为绝对定位，
+  top:50%,
+  left:50,
+  transform: translate(-50%,-50%)
+  transform中translate偏移的百分比值是相对于自身大小的
 </p>
 
-<hr>
+<div class="break-line"></div>
 
 <div class="absolute-parent">
-    <div class="absolute-child-with-height">
-        <span>
-            hehe i am the child inside
-        </span>
-    </div>
+  <div class="absolute-child-with-height">
+    hehe i am the child inside
+  </div>
 </div>
 
 <p>
-    【Negative Margins】负外边距
-    单个块级元素的垂直方向居中, 在【知道】子级block的高度时， 父级设置为相对定位，子级设置为绝对定位，top:50%, left:50%,
-    height: Xpx; width: Ypx; margin-left: -1/2*X px; margin-top: -1/2*Y px;
+  `Negative Margins`负外边距
+  单个块级元素的垂直方向居中, 在`知道`子级block的高度时，父级设置为相对定位，子级设置为绝对定位，
+  top:50%,
+  left:50%,
+  height: Xpx;
+  width: Ypx;
+  margin-left: -1/2*X px;
+  margin-top: -1/2*Y px;
 </p>
 
-<hr>
-
-<div class="absolute-parent-flex">
-    <div class="absolute-child-flex">
-        <span>
-            hehe i am the child inside
-        </span>
-    </div>
-</div>
-
-<p>
-    优先推荐使用flex 布局
-    单个块级元素的垂直且水平方向居中, 设置父级元素为
-    display: flex;
-    justify-content: center; //主轴方向上的对齐
-    align-items: center; //交叉轴方向上的对齐
-
-
-    height: 200px;
-    background-color: #ffcf22;
-    子元素可以不需要设置
-</p>
-
-<hr>
+<div class="break-line"></div>
 
 <div class="absolute-center">
-    <div class="absolute-center-child">
+  <div class="absolute-center-child">
         <span>
             hehe i am the child inside
         </span>
-    </div>
+  </div>
 </div>
 
 <p>
-    绝对定位居中
-    设置父级元素为relative定位，
-    设置子级为
-    position: absolute;
-    margin: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    width: 50%;
-    height: 50%;
+  绝对定位居中
+  设置父级元素为relative定位，
+  设置子级为
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  height: 50%;
 </p>
 
-<hr>
+<div class="break-line"></div>
 
+<div class="absolute-parent-flex">
+  <div class="absolute-child-flex">
+    hehe i am the child inside
+  </div>
+</div>
+
+<p>
+  优先推荐使用flex 布局
+  单个块级元素的垂直且水平方向居中, 设置父级元素为
+  display: flex;
+  justify-content: center; //主轴方向上的对齐
+  align-items: center; //交叉轴方向上的对齐
+</p>
+
+<div class="break-line"></div>
 
 </body>
 </html>
