Add link to monster

--- a/position/index.html
+++ b/position/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-<div class="postion">
+<div class="position">
     <hr>
     Test relative position
     <hr>
