Add new implement for modal

--- a/modal/index.html
+++ b/modal/index.html
@@ -32,6 +32,10 @@
                 <button onclick="openModalV5()">打开窗口V5</button>
                 垂直居中短modal 宽度高度不固定 版本2
             </div>
+            <div>
+                <button onclick="openModalV6()">打开窗口V6</button>
+                垂直居中长modal 宽度高度不固定 版本1 - 支持屏幕高度显示不足时的modal滚动
+            </div>
             <p>我只是无意义的背景内容</p>
             <p>我只是无意义的背景内容</p>
             <p>我只是无意义的背景内容</p>
@@ -189,6 +193,40 @@
                 <p>我在窗口中</p>
             </section>
         </div>
+    </div>
+
+    <div id="modal-V6-overlay" onclick="closeModalV6()">
+        <section class="modal-V6-content">
+            <p>我在窗口中我在窗口中我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+            <p>我在窗口中</p>
+        </section>
     </div>
 </div>
 
