fix typo in BFC

--- a/BFC/BFC1.html
+++ b/BFC/BFC1.html
@@ -20,7 +20,7 @@
   .main {
     height: 200px;
     background: #fcc;
-    /*设置开启main的BFC，则不会重叠*/
+    /*设置开启main的BFC，则不会重叠 - BFC的区域不会与float的元素区域重叠*/
     overflow: hidden;
   }
 
