--- a/BFC/index.html
+++ b/BFC/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>BFC</title>
   <style>
+    body{
+      margin: 0;
+      padding: 0;
+    }
     .block-1 {
       height: 300px;
       background-color: #fb7921;
