add slide and pixel

--- a/slide-animation/index.html
+++ b/slide-animation/index.html
@@ -28,11 +28,11 @@
 <div class="container">
   <div class="slides">
     <div class="block block1">
-      <p>林允儿1</p>
+      <p>Lim Yoona1</p>
       <img class="pic-img pic-1-img" src="./linyuner.jpg" alt="林允儿">
     </div>
     <div class="block block2">
-      <p>林允儿2</p>
+      <p>Lim Yoona2</p>
       <img class="pic-img pic-2-img" src="./spoon.gif" alt="林允儿 可爱">
     </div>
     </a>
